examples/compiler_errors/adversarial/common_dev_mistakes/WrongArity.flx
module WrongArity {
    fn add(a: Int, b: Int) -> Int {
        a + b
    }

    fn bad() -> Int {
        add(1)
    }
}
